Remove code for cybcop and stats
Change-Id: I03f28de7635365e6587a2b6897d300289e33d6bc

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,23 +2,23 @@
 
 include ../Makefile.inc
 
-OBJS =	access.o akill.o blacklist.o channels.o chanserv.o compat.o conf.o cidr.o crypt_shs1.o crypt_userhost.o cybcop.o \
+OBJS =	access.o akill.o blacklist.o channels.o chanserv.o compat.o conf.o cidr.o crypt_shs1.o crypt_userhost.o \
 	datafiles.o debugserv.o helpserv.o ignore.o jupe.o lang.o logging.o main.o memory.o memoserv.o messages.o misc.o \
-	nickserv.o oper.o operserv.o process.o regions.o reserved.o rootserv.o seenserv.o send.o servers.o signals.o \
-	sockutil.o spam.o statserv.o storage.o strings.o sxline.o tagline.o timeout.o trigger.o users.o version.o
+	nickserv.o oper.o operserv.o process.o regions.o reserved.o rootserv.o send.o servers.o signals.o \
+	sockutil.o spam.o storage.o strings.o sxline.o tagline.o timeout.o trigger.o users.o version.o
 
-SRCS =	access.c akill.c blacklist.c channels.c chanserv.c compat.c conf.c cidr.c crypt_shs1.c crypt_userhost.c cybcop.c \
+SRCS =	access.c akill.c blacklist.c channels.c chanserv.c compat.c conf.c cidr.c crypt_shs1.c crypt_userhost.c \
 	datafiles.c debugserv.c helpserv.c ignore.c jupe.c lang.c logging.c main.c memory.c memoserv.c messages.c misc.c \
-	nickserv.c oper.c operserv.c process.c regions.c reserved.c rootserv.c seenserv.c send.c servers.c signals.c \
-	sockutil.c spam.c statserv.c storage.c strings.c sxline.c tagline.c timeout.c trigger.c users.c version.c
+	nickserv.c oper.c operserv.c process.c regions.c reserved.c rootserv.c send.c servers.c signals.c \
+	sockutil.c spam.c storage.c strings.c sxline.c tagline.c timeout.c trigger.c users.c version.c
 
-build: $(PROGRAM)
+build: services
 
 
 ########
 
 
-$(PROGRAM): ../inc/version.h $(OBJS)
+services: ../inc/version.h $(OBJS)
 	$(CC) $(LFLAGS) $(LIBS) $(OBJS) -o $@
 
 .c.o:
@@ -34,7 +34,6 @@ cidr.o:				cidr.c				../inc/cidr.h
 conf.o:				conf.c
 crypt_shs1.o:			crypt_shs1.c 			../inc/crypt_shs1.h
 crypt_userhost.o:		crypt_userhost.c		../inc/crypt_shs1.h
-cybcop.o:			cybcop.c			../inc/timeout.h
 datafiles.o:			datafiles.c
 debugserv.o: 			debugserv.c 			../inc/lang.h ../inc/options.h
 helpserv.o:			helpserv.c			../inc/lang.h
@@ -54,13 +53,11 @@ process.o:			process.c			../inc/version.h
 regions.o:			regions.c			../inc/regions.h
 reserved.o:			reserved.c			../inc/reserved.h
 rootserv.o:			rootserv.c  			../inc/lang.h ../inc/lang_msg.h ../inc/options.h
-seenserv.o:			seenserv.c			../inc/options.h
 send.o:				send.c				../inc/lang.h ../inc/lang_msg.h
 servers.o:			servers.c
 signals.o:			signals.c
 sockutil.o:			sockutil.c			../inc/options.h
 spam.o:				spam.c				../inc/spam.h ../inc/common.h ../inc/send.h
-statserv.o:			statserv.c			../inc/options.h
 storage.o:			storage.c			../inc/storage.h
 strings.o:			strings.c
 sxline.o:			sxline.c			../inc/sxline.h
