--- a/doc/services.conf.example
+++ b/doc/services.conf.example
@@ -84,6 +84,8 @@ MS:MemoServ
 HS:HelpServ
 OS:OperServ
 RS:RootServ
+ST:StatServ
+SS:SeenServ
 Global:Azzurra
 
 
@@ -146,6 +148,17 @@ CHANEXP:40
 # #####################################################################
 MEMOEXP:21
 
+# #####################################################################
+# The number of days until stats expire.                              #
+#                                                                     #
+# #####################################################################
+STATEXP:30
+
+# #####################################################################
+# The number of days until seens expire.                              #
+#                                                                     #
+# #####################################################################
+SEENEXP:30
 
 # #####################################################################
 # Default AKILL expiry time in seconds. 86400 seconds is 1 day        #
