Fix server userCount

--- a/doc/services.motd.example
+++ b/doc/services.motd.example
@@ -8,7 +8,6 @@ For a listing of available MemoServ commands, type: /msg MemoServ HELP
 
 Further information and help on services commands are available in #IRCHelp
 
-Report bugs using http://ticket.azzurra.org or via E-Mail at bugs@azzurra.org thank you!
+Report bugs via E-Mail at irc@azzurra.org thank you!
 
-Coding Team: Gastaman, Shaka.
-Contact us at: services@azzurra.org
+Coding Team: Shaka, Gastaman, Sonic, morph, Scorpion.
