--- a/doc/services.motd.example
+++ b/doc/services.motd.example
@@ -8,6 +8,6 @@ For a listing of available MemoServ commands, type: /msg MemoServ HELP
 
 Further information and help on services commands are available in #IRCHelp
 
-Report bugs via E-Mail at irc@azzurra.org thank you!
+Report bugs via E-Mail at irc@azzurra.chat thank you!
 
 Coding Team: Shaka, Gastaman, Sonic, morph, Scorpion.
